# Training_Materials_25

./: .gitignore  README.md  place_specific_expectations.txt  pyproject.toml
data/: county_population.parquet  county_population.xlsx  gerrymandria.json
data/county_population/: county_population.csv
data/visualization/: num_prog_winners_by_turnout.pkl
data_prep/: overvotes_portland.ipynb
notebooks/: hello_world.ipynb
notebooks/joint/: Joint_1_Viz.ipynb  Joint_2_model_validation_and_proportionality.ipynb
notebooks/old_notebooks/: Tech_3_Running_elections.ipynb  Tutorial_2_hello_world.ipynb
notebooks/practitioners/: Prac_1-1_hello_world.ipynb  Prac_1-2_loading_a_CVR.ipynb  Prac_2_knobs_to_turn.ipynb  Prac_3_cvrs_elections.ipynb  cleaned_mn_profile.pkl  generate_profiles_run_elections.ipynb  west_dunbartonshire_2017_ward2.csv
notebooks/technical/: Tech_1_math_of_votekit_hw.ipynb  Tech_1_math_of_votekit_live.ipynb  Tech_2_data_sources_acquisition_prep.ipynb
place_specific_data/: data_prep.ipynb
place_specific_data/Annapolis-MD/: Annapolis_approximated_by_precincts.parquet
place_specific_data/Atlanta-GA/: Atlanta_approximated_by_precincts.parquet  Atlanta_elections.parquet  Atlanta_pop.parquet  Atlanta_vap.parquet
place_specific_data/Dallas_County-TX/: Dallas_elections.parquet  Dallas_pop.parquet  Dallas_precincts.parquet  Dallas_vap.parquet
place_specific_data/Denver-CO/: Denver_elections.parquet  Denver_pop.parquet  Denver_precincts.parquet  Denver_vap.parquet  denver_city_council.gpkg
place_specific_data/Deschutes_County-OR/: Deschutes_pop.parquet  (+3 more)
(+45 files in other folders)
