[project]
name = "Training_Materials_25" 
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "openpyxl>=3.1.5",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
    "votekit>=3.1.0",
]
